--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,40 @@ button:hover {
 .mb-3 {
     margin-bottom: 1rem;
 }
+
+.tab {
+    margin-top: 1rem;
+    overflow: hidden;
+    border: 2px solid #333333;
+}
+
+.tab button {
+    float: left;
+    border: none;
+    padding: 1rem 1.2rem;
+    outline: none;
+    transition: 0.3s;
+}
+
+.tab button.active {
+    background-color: #dddddd;
+}
+
+.tabContent {
+    display: none;
+    padding: 1rem 1.5rem;
+    border: 2px solid #333333;
+    border-top: none;
+}
+
+.tabContent h2 {
+    margin-top: 0;
+}
+
+.tabContent button {
+    width: 50%;
+}
+
+input {
+    padding: 0.5rem 1rem;
+}
